Improve command registration and argument handling