@@ -10,7 +10,9 @@ import java.time.Duration;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.concurrent.TimeUnit;
+import java.util.concurrent.Future;
+import java.util.concurrent.RejectedExecutionException;
+import java.util.concurrent.ScheduledExecutorService;
 import org.jetbrains.annotations.NotNull;
 
 public final class VirtualThreadExecutor implements CommandExecutor, AutoCloseable {
@@ -18,6 +20,7 @@ public final class VirtualThreadExecutor implements CommandExecutor, AutoCloseab
     private static final Duration DEFAULT_TIMEOUT = Duration.ofSeconds(30);
 
     private final ExecutorService executor;
+    private final ScheduledExecutorService timeoutExecutor;
     private final CommandMessages messages;
     private final Duration timeout;
 
@@ -34,7 +37,12 @@ public final class VirtualThreadExecutor implements CommandExecutor, AutoCloseab
         if (timeout.isZero() || timeout.isNegative()) {
             throw new IllegalArgumentException("timeout must be positive");
         }
-        this.executor = Executors.newVirtualThreadPerTaskExecutor();
+        this.executor = createTaskExecutor();
+        this.timeoutExecutor = Executors.newSingleThreadScheduledExecutor(task -> {
+            Thread thread = new Thread(task, "commandengine-timeouts");
+            thread.setDaemon(true);
+            return thread;
+        });
         this.messages = Preconditions.checkNotNull(messages, "messages");
         this.timeout = timeout;
     }
@@ -46,7 +54,7 @@ public final class VirtualThreadExecutor implements CommandExecutor, AutoCloseab
         try {
             command.run();
             return CommandResult.success();
-        } catch (RuntimeException exception) {
+        } catch (Throwable exception) {
             return CommandResult.failure(FailureReason.EXCEPTION, messages.internalError());
         }
     }
@@ -56,15 +64,42 @@ public final class VirtualThreadExecutor implements CommandExecutor, AutoCloseab
             @NotNull CommandSource source, @NotNull Runnable command) {
         Preconditions.checkNotNull(source, "source");
         Preconditions.checkNotNull(command, "command");
-        return CompletableFuture.supplyAsync(() -> executeSync(source, command), executor)
-                .completeOnTimeout(
-                        CommandResult.failure(FailureReason.EXCEPTION, messages.internalError()),
-                        timeout.toMillis(),
-                        TimeUnit.MILLISECONDS);
+        CompletableFuture<CommandResult> result = new CompletableFuture<>();
+        Future<?> task;
+        try {
+            task = executor.submit(() -> result.complete(executeSync(source, command)));
+        } catch (RejectedExecutionException exception) {
+            return CompletableFuture.completedFuture(
+                    CommandResult.failure(FailureReason.EXCEPTION, messages.internalError()));
+        }
+        Future<?> timeoutTask = timeoutExecutor.schedule(
+                () -> {
+                    if (!result.isDone()) {
+                        result.complete(CommandResult.failure(FailureReason.EXCEPTION, messages.internalError()));
+                        task.cancel(true);
+                    }
+                },
+                timeout.toMillis(),
+                java.util.concurrent.TimeUnit.MILLISECONDS);
+        result.whenComplete((ignoredResult, ignoredThrowable) -> timeoutTask.cancel(false));
+        return result;
     }
 
     @Override
     public void close() {
-        executor.close();
+        if (!timeoutExecutor.isShutdown()) {
+            timeoutExecutor.shutdownNow();
+        }
+        if (!executor.isShutdown()) {
+            executor.close();
+        }
+    }
+
+    private static @NotNull ExecutorService createTaskExecutor() {
+        try {
+            return Executors.newVirtualThreadPerTaskExecutor();
+        } catch (UnsupportedOperationException exception) {
+            return Executors.newCachedThreadPool();
+        }
     }
 }
